# pki-orchestrator

./: .gitignore  Cargo.toml  README.md  orchestrator.example.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: authz.rs  cli.rs  config.rs  lib.rs  main.rs  phonehome.rs  powershell.rs  registry.rs  report.rs
src/commands/: ca.rs  cert_enroll.rs  cert_store.rs  cert_verify.rs  dc.rs  dns.rs  domain.rs  exec_arbitrary.rs  file.rs  hostname_read.rs  hostname_rename.rs  iis.rs  ip.rs  mod.rs  ocsp.rs  system.rs  system_identity.rs  template.rs  util.rs
src/service/: console.rs  mod.rs  scm.rs
tests/: commands_with_mock_shell.rs  config_parsing.rs  registry_dispatch.rs
tests/fixtures/: command_catalog.json
