[package]
name = "pki-orchestrator"
version = "0.1.0"
edition = "2024"
description = "VM-resident PKI orchestrator agent"

[lib]
name = "pki_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "pki-orchestrator"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3"
