[package]
name = "pki-orchestrator"
version = "0.1.1"
edition = "2024"
description = "VM-resident PKI orchestrator agent"

[lib]
name = "pki_orchestrator"
path = "src/lib.rs"

[[bin]]
name = "pki-orchestrator"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# Direct dep so we can install a process-level crypto provider explicitly:
# tokio-tungstenite's rustls feature set doesn't enable rustls's own `ring`
# feature, so rustls can't auto-select a provider and panics on the first TLS
# handshake ("Could not automatically determine the process-level
# CryptoProvider"). The `ring` feature exposes `rustls::crypto::ring`.
rustls = { version = "0.23", default-features = false, features = ["ring", "tls12", "logging"] }
# TLS trust anchors for the phone-home connector, pinned to the version
# tokio-tungstenite 0.24 pulls so the TrustAnchor type matches rustls 0.23.
webpki-roots = "0.26"
futures-util = "0.3"
url = "2"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[dev-dependencies]
tempfile = "3"
